--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ body {
   margin-bottom: 40px;
 }
 
+#budget-month-selection-container {
+  margin-bottom: 16px;
+}
+
 .budget-sub-containers {
   display: flex;
   flex-direction: row;
@@ -23,6 +27,16 @@ body {
   align-items: center;
   display: flex;
   justify-content: center;
+  margin-bottom: 56px;
+}
+
+#budget-summary-container {
+  align-items: center;
+  border: solid 1px black;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
 }
 
 button {
@@ -42,7 +56,7 @@ button {
   flex-direction: column;
   height: 300px;
   margin-bottom: 1%;
-  padding: 4px;
+  padding: 16px;
   width: 25%;
 }
 
@@ -78,6 +92,7 @@ header {
 }
 
 input {
+  border: solid 1px black;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
 }
