--- a/index.css
+++ b/index.css
@@ -4,25 +4,25 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  padding: 40px 100px;
+  padding: 16px 100px;
 }
 
-#budget-chart-container {
+#budget-chart-container, #portfolio-chart-container {
   margin-top: 40px;
 }
 
-#budget-container {
+#budget-container, #portfolio-container {
   display: flex;
   flex-direction: column;
   text-align: center;
   margin-bottom: 40px;
 }
 
-#budget-month-selection-container {
+#budget-month-selection-container, #portfolio-instructions-container {
   margin-bottom: 16px;
 }
 
-.budget-sub-containers {
+.budget-sub-containers, #portfolio-asset-sub-container {
   display: flex;
   flex-direction: row;
 }
@@ -34,7 +34,7 @@ body {
   margin-bottom: 56px;
 }
 
-#budget-summary-container {
+#budget-summary-container, #portfolio-asset-container, #portfolio-summary-container {
   align-items: center;
   border: solid 1px black;
   border-radius: 6px;
@@ -70,6 +70,18 @@ canvas {
   width: 25%;
 }
 
+.asset-sub-container {
+  align-items: center;
+  border: solid 1px black;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+  padding: 16px;
+  text-align: center;
+  width: 20%;
+}
+
 .category-containers-margin-left {
   margin-left: 1%;
   margin-right: 0.5%;
@@ -92,13 +104,13 @@ canvas {
   margin: 0 40px;
 }
 
-.feature-description-buttons {
+.feature-description-buttons, .portfolio-asset-buttons {
   border: solid 1px black;
   border-radius: 12px;
   padding: 4px 8px;
 }
 
-.feature-description-buttons:hover {
+.feature-description-buttons:hover, .portfolio-asset-buttons:hover {
   background: black;
   color: white;
 }
@@ -115,7 +127,7 @@ input {
   font-size: 16px;
 }
 
-#main-category-container {
+#main-category-container, #portfolio-asset-container {
   margin-bottom: 40px;
 }
 
@@ -138,6 +150,28 @@ input {
 .navbar-links:hover {
   text-shadow: 0 0 1px black;
 }
+
+.portfolio-asset-buttons {
+  margin: 0 1%;
+}
+
+#portfolio-asset-sub-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.remove-asset-button {
+  background: none;
+  border: none;
+  color: rgb(252, 106, 107);
+  margin-left: 90%;
+}
+
+.remove-asset-button:hover {
+  text-shadow: 0 0 1px red;
+}
+
 
 #remove-category-button {
   color: rgb(252, 106, 107);
